[package]
name = "bevy_editor_cam"
version = "0.5.0"
edition = "2021"
description = "A camera controller for editors and CAD."
license = "MIT OR Apache-2.0"
keywords = ["controller", "camera", "bevy", "CAD"]
repository = "https://github.com/aevyrie/bevy_editor_cam"
documentation = "https://docs.rs/crate/bevy_editor_cam/latest"
exclude = ["assets/"]

[features]
default = ["extension_anchor_indicator", "extension_independent_skybox"]
extension_anchor_indicator = ["bevy_gizmos"]
extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]

[dependencies]
bevy_app = "0.16.1"
bevy_color = "0.16.1"
bevy_derive = "0.16.1"
bevy_ecs = "0.16.1"
bevy_image = "0.16.1"
bevy_input = "0.16.1"
bevy_log = "0.16.1"
bevy_math = "0.16.1"
bevy_picking = "0.16.1"
bevy_reflect = "0.16.1"
bevy_render = "0.16.1"
bevy_time = "0.16.1"
bevy_transform = "0.16.1"
bevy_utils = "0.16.1"
bevy_window = "0.16.1"
bevy_platform = "0.16.1"
# Optional
bevy_asset = { version = "0.16.1", optional = true }
bevy_core_pipeline = { version = "0.16.1", optional = true }
bevy_gizmos = { version = "0.16.1", optional = true }

[dev-dependencies]
bevy_framepace = "0.19.1"
big_space = "0.10.0"
indoc = "2.0.5"
rand = "0.9"

[dev-dependencies.bevy]
version = "0.16.0"
features = [
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "jpeg",
    "ktx2",
    "tonemapping_luts",
    "x11",
    "zstd",
]
