[package]
name = "bevy_editor_cam"
version = "0.9.0"
edition = "2021"
description = "A camera controller for editors and CAD."
license = "MIT OR Apache-2.0"
keywords = ["controller", "camera", "bevy", "CAD"]
repository = "https://github.com/aevyrie/bevy_editor_cam"
documentation = "https://docs.rs/crate/bevy_editor_cam/latest"
exclude = ["assets/"]

[features]
default = ["extension_anchor_indicator", "extension_independent_skybox"]
extension_anchor_indicator = ["bevy_gizmos"]
extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]

[dependencies]
bevy_app = "0.18"
bevy_color = "0.18"
bevy_derive = "0.18"
bevy_ecs = "0.18"
bevy_image = "0.18"
bevy_input = "0.18"
bevy_log = "0.18"
bevy_math = "0.18"
bevy_picking = "0.18"
bevy_reflect = "0.18"
bevy_camera = "0.18"
bevy_render = "0.18"
bevy_time = "0.18"
bevy_transform = "0.18"
bevy_window = "0.18"
bevy_platform = "0.18"
# Optional
bevy_asset = { version = "0.18", optional = true }
bevy_core_pipeline = { version = "0.18", optional = true }
bevy_gizmos = { version = "0.18", optional = true }

[dev-dependencies]
bevy_framepace = "0.21"
big_space = "0.12.0"
indoc = "2.0.5"
rand = "0.10"

[dev-dependencies.bevy]
version = "0.18.0-rc.2"
features = [
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_scene",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "jpeg",
  "ktx2",
  "tonemapping_luts",
  "x11",
  # "zstd",
]

[lints.clippy]
type_complexity = "allow"

[[example]]
name = "cad"
path = "examples/cad.rs"
required-features = ["default"]

[[example]]
name = "floating_origin"
path = "examples/floating_origin.rs"
required-features = ["default"]

[[example]]
name = "map"
path = "examples/map.rs"
required-features = ["default"]

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["default"]

[[example]]
name = "ortho"
path = "examples/ortho.rs"
required-features = ["default"]

[[example]]
name = "split_screen"
path = "examples/split_screen.rs"
required-features = ["default"]

[[example]]
name = "zoom_limits"
path = "examples/zoom_limits.rs"
required-features = ["default"]
